# AgentDrive

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  fix_syntax.py  implementation_plan.md  pyproject.toml  setup.sh  test_ignore.py
.github/: README.md
.github/workflows/: ci.yaml  docker-publish.yml
docs/: central_brain_architecture.md
plumber/: hook-template.sh  vault-harvester.py  vault-plumber.py
templates/: meeting.md  person.md  project.md
tests/: __init__.py  test_archive.py  test_config.py  test_git_workflow.py  test_health.py  test_registry.py  test_search.py
vault/: __init__.py
vault/cli/: __init__.py  main.py
vault/core/: __init__.py  archive.py  config.py  daemon.py  git_workflow.py  health.py  registry.py  scheduler.py  search.py
vault/mcp/: server.py
vault/templates/: .agentignore  AGENTS.md  deploy-ui.yml
vault/templates/ui/: index.html  package-lock.json  package.json
vault/templates/ui/src/: App.tsx  index.css
