[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-vault"
version = "1.0.0"
description = "Filesystem-as-Memory for AI Agents. Any provider."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jason Liu", email = "jxnl@example.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "schedule>=1.2",
    "rich>=13.0",
    "gitpython>=3.1",
    "pydantic>=2.0",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1"]

[project.scripts]
vault = "vault.cli.main:cli"

[project.urls]
Homepage = "https://github.com/pisigmac/personal-vault"
Repository = "https://github.com/pisigmac/personal-vault"

[tool.hatch.build.targets.wheel]
packages = ["vault"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
