[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdrive"
version = "1.0.0"
description = "Filesystem-as-Memory for AI Agents. Any provider."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pisigmac", email = "sigmapi1@outlook.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "schedule>=1.2",
    "rich>=13.0",
    "gitpython>=3.1",
    "pydantic>=2.0",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1"]

[project.scripts]
vault = "vault.cli.main:cli"

[project.urls]
Homepage = "https://github.com/pisigmac/agentdrive"
Repository = "https://github.com/pisigmac/agentdrive"

[tool.hatch.build.targets.wheel]
packages = ["vault"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
